--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,13 @@ react-dapp.notes
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+node_modules
+.env
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
